@@ -31,6 +31,7 @@
 			  <li><a class="sb-link" id="idsystem" onmouseover="cursorhand()" onmouseout="cursordefault()"><i class="icon-chevron-right"></i> System</a></li>
 			  <li><a class="sb-link" id="idloghistory" onmouseover="cursorhand()" onmouseout="cursordefault()"><i class="icon-chevron-right"></i> Log History</a></li>
 			  <li><a class="sb-link" id="idnotifications" onmouseover="cursorhand()" onmouseout="cursordefault()"><i class="icon-chevron-right"></i> Notificatons</a></li>
+			  <li><a class="sb-link" id="idemailsetup" onmouseover="cursorhand()" onmouseout="cursordefault()"><i class="icon-chevron-right"></i> Email Setup</a></li>
 			  <li><a class="sb-link" id="idmetercounters" onmouseover="cursorhand()" onmouseout="cursordefault()"><i class="icon-chevron-right"></i> Meter/Counter Setup</a></li>
 			  <li><a class="sb-link" id="idothersettings" onmouseover="cursorhand()" onmouseout="cursordefault()"><i class="icon-chevron-right"></i> Other Settings</a></li>
 			</ul>
@@ -158,8 +159,14 @@
 			</tr>
 			</table>
 			To get a free account/API key click <a class="norm-link" href="http://www.notifymyandroid.com/" target="_blank">Here</a><br>
-			<br>
-			<h2>Email (SMTP):</h2>
+		</section>
+
+		<!-- Email Setup
+		================================================== -->
+		<section id="emailsetup">
+		  <div class="page-header-small">
+			<h1>Email Setup</h1>
+		  </div>
 			<table class="display" id="emailtable" border="0" cellpadding="0" cellspacing="0">
 			<tr>
 				<td align="right" style="width:60px"><label>From: </label></td>
@@ -180,6 +187,10 @@
 			<tr>
 				<td align="right" style="width:60px"><label>Password: </label></td>
 				<td><input type="password" id="EmailPassword" name="EmailPassword" style="width: 200px; padding: .2em;" class="text ui-widget-content ui-corner-all" />  <a class="btnstyle3" href="javascript:TestEmailNotification()">Test</a></td>
+			</tr>
+			<tr>
+				<td></td>
+				<td><input type="checkbox" id="useemailinnotificationsalerts" name="useemailinnotificationsalerts"/> Send Email Notification Alerts</td>
 			</tr>
 			</table>
 		</section>
@@ -437,6 +448,9 @@ function ShowSettings()
       if (typeof data.EmailPassword!= 'undefined') {
         $("#emailtable #EmailPassword").val(data.EmailPassword);
       }
+      if (typeof data.UseEmailInNotifications != 'undefined') {
+        $("#emailtable #useemailinnotificationsalerts").prop('checked',data.UseEmailInNotifications==1);
+      }
      }
   });
 
@@ -491,6 +505,7 @@ $(document).ready(function() {
   MakeScrollLink("#idsystem","#system");
   MakeScrollLink("#idloghistory","#loghistory");
   MakeScrollLink("#idnotifications","#notifications");
+  MakeScrollLink("#idemailsetup","#emailsetup");
   MakeScrollLink("#idmetercounters","#metercounters");
   MakeScrollLink("#idothersettings","#othersettings");
   
