@@ -22,6 +22,7 @@ Version 1.0.xxx (May xxth 2013)
 - Implemented: Razberry (Z-Wave) switch support
 - Implemented: Email notifications now send in background
 - Implemented: Light/Switch notification On/Off type
+- Implemented: Option to enable/disable sending Emails in Notification Alerts
 
 Version 1.0.484 (April 28th 2013)
 - Implemented: Raspberry Pi, updating via the web browser (Settings Tab)
